objects/Case_Status_Change_Log__c.object
<CustomObject><fields>
        <fullName>CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Id of the related Case record</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Status Change Logs</relationshipLabel>
        <relationshipName>Case_Status_Change_Logs_CaseId</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Case_Status__c</fullName>
        <description>Case Status at the time of the log entry</description>
        <label>Case Status</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Notification_Sent_Date__c</fullName>
        <description>Date the a notification was sent based on the business logic; 3 days not changed</description>
        <label>Notification Sent Date</label>
        <type>DateTime</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Used for logging when a notification is sent to internal users related to Case/ Account when the Status does not change (based on business criteria)</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Case Status Change Log</label><nameField>
        <displayFormat>CSCL-{0000000}</displayFormat>
        <label>Case Status Change Log Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Case Status Change Logs</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><recordTypes>
        <fullName>WBN_Change_Log</fullName>
        <active>true</active>
        <description>Master record type for WBN Status Change Logs</description>
        <label>WBN Change Log</label>
    </recordTypes></CustomObject>